[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Robot/RobotoSlab-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/ButtonBackground_Normal.png" type="Texture" id=2]
[ext_resource path="res://Scripts/PanelButton/PanelButton.gd" type="Script" id=3]
[ext_resource path="res://Sprites/ButtonBackground_Hover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ButtonBackground_Clicked.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ButtonBackground_Disabled.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="Theme" id=2]
Button/styles/normal = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PanelButton" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 90 )
theme = SubResource( 2 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="Control" parent="."]
anchor_top = 0.932
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.2
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 15 )
mouse_filter = 2

[node name="TextBackground" type="ColorRect" parent="ButtonLabel"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 10 )
mouse_filter = 2
color = Color( 0.117647, 0.117647, 0.117647, 0.815686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabelText" type="RichTextLabel" parent="ButtonLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -6.0
margin_right = -5.0
margin_bottom = 0.119995
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 36 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[right]Button Name"
text = "Button Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tweens" type="Node" parent="."]

[node name="T_LabelBackground" type="Tween" parent="Tweens"]
[connection signal="mouse_entered" from="." to="." method="_on_PanelButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PanelButton_mouse_exited"]
